--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -2865,13 +2865,35 @@ aside {
   .lang a {
     display: inline-block; } }
 
+@media (max-width: 590px) {
+  .sidemodal {
+    width: 90%; }
+    .sidemodal .inner {
+      width: 100%;
+      padding-right: 3rem;
+      margin-left: 0;
+      padding-left: 3.7rem; }
+    .sidemodal .close-modal {
+      right: 20px; } }
+
 @media (max-width: 420px) {
+  .sidemodal .inner {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 8rem; }
+  .sidemodal .text {
+    padding-right: 0;
+    font-size: 1.4rem; }
   .footer {
     font-size: 1.3rem; }
   .lang {
     font-size: 1.4rem; } }
 
 @media (max-width: 380px) {
+  .sidemodal .close-modal {
+    top: 20px; }
+  .sidemodal .title {
+    font-size: 3rem; }
   .header__inner {
     justify-content: space-between; }
     .header__inner > div {
