--- a/app/scss/_responsive-pages.scss
+++ b/app/scss/_responsive-pages.scss
@@ -153,20 +153,22 @@
 }
 
 
-@media (max-width: 1200px){
-	.homepage .intro{
-		padding-left: 18%;
-		&:before{
-			left: 17%;
+@media (max-width: 1199px){
+	.homepage{
+		.intro{
+			padding-left: 18%;
+			&:before{
+				left: 17%;
+			}
+			&:after{
+				bottom: -5px;
+			}
 		}
-		&:after{
-			bottom: -5px;
+		.counter:before{
+			right: 50px;
 		}
 	}
 
-	.homepage .counter:before{
-		right: 50px;
-	}
 }
 
 
@@ -539,6 +541,7 @@
 		width: calc(100% - 5.5rem);
 	}
 
+	
 
 }
 
