Поправлена сетка в шапке главной страницы

--- a/app/scss/_browsers.scss
+++ b/app/scss/_browsers.scss
@@ -13,6 +13,14 @@ _::-webkit-:host:not(:root:root), .header{
 }
 
 
+/*Edge*/
+/*
+@supports ( -ms-accelerator:true ) 
+{
+}
+*/
+
+
 //ie11
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 }
