--- a/app/scss/_responsive-base.scss
+++ b/app/scss/_responsive-base.scss
@@ -129,6 +129,10 @@
 }
 
 @media (max-width: 420px){
+	.header .btn-callback{
+		float: none;
+		margin-left: 0;
+	}
 	.sidemodal{
 		.inner{
 			padding-left: 2rem;
