--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1583,10 +1583,11 @@ aside {
 /* =/more list
 ---------------------------*/
 .angle {
+  height: 100vh;
+  overflow: hidden;
   position: fixed;
   right: 0;
   top: 0;
-  height: 100vh;
   width: 600px; }
   .angle:after {
     height: 0;
@@ -1664,12 +1665,12 @@ aside {
       z-index: 100; }
     .homepage .right .new-title {
       background: #13242b;
-      width: 110px;
-      height: 395px;
-      z-index: 99;
-      padding-top: 18px;
       display: flex;
-      justify-content: center; }
+      height: 395px;
+      justify-content: center;
+      padding-top: 18px;
+      width: 110px;
+      z-index: 99; }
       .homepage .right .new-title img {
         align-self: flex-start; }
   .homepage .counter {
@@ -3156,6 +3157,12 @@ aside {
 ::-ms-clear {
   display: none; }
 
+/*Edge*/
+/*
+@supports ( -ms-accelerator:true ) 
+{
+}
+*/
 @media (max-width: 1600px) {
   .angle {
     width: 520px; } }
@@ -3232,6 +3239,9 @@ aside {
     width: 190px; } }
 
 @media (max-width: 420px) {
+  .header .btn-callback {
+    float: none;
+    margin-left: 0; }
   .sidemodal .inner {
     padding-left: 2rem;
     padding-right: 2rem;
