--- a/app/scss/_homepage.scss
+++ b/app/scss/_homepage.scss
@@ -1,8 +1,9 @@
 .angle{
+	height: 100vh;
+	overflow: hidden;
 	position: fixed;
 	right: 0;
 	top: 0;
-	height: 100vh;
 	width: 600px;
 	&:after{
 		@extend .before;
@@ -107,16 +108,12 @@
 		}
 		.new-title{
 			background: $color9;
-			// position: absolute;
-			// left: 0;
-			// top: 20px;
-			width: 110px;
-			height: 395px;
-			z-index: 99;
-			// padding-left: 25px;
-			padding-top: 18px;
 			display: flex;
+			height: 395px;
 			justify-content: center;
+			padding-top: 18px;
+			width: 110px;
+			z-index: 99;
 			img{
 				align-self: flex-start
 			}
