--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -723,13 +723,46 @@ html, body {
 
 .grid {
   transition: .3s transform ease-out;
-  transform-origin: 0 50%;
-  display: grid;
-  grid-template-areas: "header" "main" "footer";
-  grid-template-rows: auto 1fr auto;
-  min-height: 100vh; }
+  transform-origin: 0 50%; }
   .grid.inner footer {
     background-color: #000; }
+
+body {
+  display: flex;
+  flex-flow: column; }
+
+.homepage {
+  flex-grow: 1; }
+
+.grid {
+  height: 100%;
+  display: flex;
+  flex-direction: column; }
+  .grid .main {
+    flex-grow: 1; }
+
+@supports (display: grid) {
+  .grid {
+    height: auto;
+    min-height: 100vh;
+    display: grid;
+    grid-template-areas: "header" "main" "footer";
+    grid-template-rows: auto 1fr auto; } }
+
+.selectize-input input {
+  font-weight: 100; }
+  .selectize-input input::-webkit-input-placeholder {
+    color: #fff; }
+  .selectize-input input::-moz-placeholder {
+    color: #fff; }
+  .selectize-input input:-ms-input-placeholder {
+    color: #fff; }
+  .selectize-input input:focus::-webkit-input-placeholder {
+    transition: line-height 0.5s ease; }
+  .selectize-input input:focus::-moz-placeholder {
+    transition: line-height 0.5s ease; }
+  .selectize-input input:focus:-ms-input-placeholder {
+    transition: line-height 0.5s ease; }
 
 input::-moz-focus-inner {
   border: 0;
@@ -1189,7 +1222,8 @@ form .captcha {
   .modal-menu .btn-callback {
     border-color: #fff;
     color: #fff;
-    margin-top: .8rem; }
+    margin-top: .8rem;
+    text-align: center; }
   .modal-menu .address {
     line-height: 1.5;
     font-size: 2rem;
