--- a/app/scss/_slick-theme.scss
+++ b/app/scss/_slick-theme.scss
@@ -66,6 +66,8 @@ $slick-opacity-not-active: 0.25 !default;
 		height: 28px;
 		position: absolute;
 		top: 0;
+		padding: 0;
+		left: 0;
 		width: 15px;
 		z-index: 10;
 		transition: .3s;
