--- a/app/scss/_mobmenu.scss
+++ b/app/scss/_mobmenu.scss
@@ -352,7 +352,8 @@ $color_2: #0563bf;
 		margin-right: 0 !important;
 		padding: 7.3rem 1.5rem 0 !important;
 		&.open{
-			transform: translateX(0);			
+			overflow-y: auto;		
+			transform: translateX(0);
 		}
 	}
 
@@ -401,6 +402,9 @@ $color_2: #0563bf;
 		}
 		a:hover{
 			border-bottom: 2px solid $color2;			
+		}
+		&.hide{
+			display: none;
 		}
 	}
 
