--- a/app/scss/_responsive-pages.scss
+++ b/app/scss/_responsive-pages.scss
@@ -1,12 +1,40 @@
 @media (max-width: 1800px){
-	.homepage .main-pic{
-		background-image: url(../images/disc1600.png);
-		height: 605px;
-		width: 620px;
+	.webp{
+		.homepage{
+			.main-pic{
+				background: url(../images/disc1600.webp) no-repeat;
+			}
+		}
 	}
-	.homepage .intro {
-	    margin-left: calc((100% - 1480px)/ 2);	
-	}	
+
+	.no-webp{
+		.homepage{
+			.main-pic{
+				background: url(../images/disc1600.png) no-repeat;
+			}
+		}
+	}
+
+
+	.homepage{
+		.main-pic{
+			height: 605px;
+			width: 620px;
+		}
+		.intro {
+		    margin-left: calc((100% - 1480px)/ 2);	
+		}	
+	}
+
+	.new{
+		&__item{
+			margin-right: 8rem;
+			width: calc(33% - 8rem);
+		}
+		&__thumb img{
+			max-width: 100%
+		}
+	}
 }
 
 
@@ -26,8 +54,24 @@
 }
 
 @media (max-width: 1550px){
+	.webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc1200.webp);
+			}
+		}
+	}
+
+	.no-webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc1200.png);
+			}
+		}
+	}
+
+		
 	.homepage .main-pic{
-		background-image: url(../images/disc1200.png);
 		height: 465px;
 		margin-left: -3rem;
 		width: 415px;
@@ -202,9 +246,22 @@
 }
 
 @media (max-width: 991px){
-	.homepage .intro p{
-		font-size: 2rem;
+	.webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc768.webp);
+			}
+		}
 	}
+
+	.no-webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc768.png);
+			}
+		}
+	}
+
 
 	.btn-learn-more{
 		font-size: 1.7rem;
@@ -217,12 +274,11 @@
 		}
 	}
 
-	.homepage .main-pic{
-		background-image: url(../images/disc768.png);
-		background-position: center center !important
-	}
 
 	.homepage{
+		.main-pic{
+			background-position: center center !important
+		}
 		.intro{
 			width: 60%;
 			padding-left: 20%;
@@ -233,11 +289,34 @@
 			&:before{
 				left: 20%;
 			}
+			p{
+				font-size: 2rem;
+			}
 		}
 		.counter{
 			font-size: 1.3rem;
 			.cifr{
 				font-size: 5rem;
+			}
+		}
+
+		.right{
+			.new-title{
+				padding-left: 20px;
+				width: 50px;
+				img{
+					height: 80px;
+				}
+			}
+			.news{
+				height: calc(100% - 40px);
+				left: 0;
+				top: 20px;
+			}
+			.prevnext{
+				left: 22px;
+				bottom: 60px;
+				transform: scale(0.75);
 			}
 		}
 	}
@@ -248,7 +327,6 @@
 	}
 	#news-carousel .news-slide{
 		width: 410px;
-		// padding: 0;
 		a{
 			height: 15rem;
 			padding: 2rem;
@@ -267,26 +345,19 @@
 			overflow: hidden;
 		}
 	}
-	.homepage .right{
-		.new-title{
-			padding-left: 20px;
-			width: 50px;
-			img{
-				height: 80px;
-			}
-		}
-		.news{
-			height: calc(100% - 40px);
-			left: 0;
-			top: 20px;
-		}
-		.prevnext{
-			left: 22px;
-			bottom: 60px;
-			transform: scale(0.75);
+
+	
+	// submenu
+	.secondary-nav{
+		display: none;
+		ul{
+		// font-size: 1.5rem;
+		// justify-content: center;
+		// a, span{
+		// 	padding-left: 1rem;
+		// 	padding-right: 1rem;
 		}
 	}
-
 }
 
 
@@ -306,7 +377,12 @@
 
 
 @media (max-width: 768px){
+
 	.homepage{
+		.grid{
+			background-image: url(../images/bg768.jpg);
+			background-size: cover;
+		}
 		.intro{
 			padding-left: 12%;
 			&:after{
@@ -333,13 +409,28 @@
 
 
 @media (max-width: 750px){
-	.homepage .main-pic{
-		background-image: url(../images/disc480.png);
-		width: 230px;
-		height: 250px;
+	.webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc480.webp);
+			}
+		}
 	}
 
+	.no-webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc480.png);
+			}
+		}
+	}
+
+
 	.homepage{
+		.main-pic{
+			width: 230px;
+			height: 250px;
+		}
 		.intro{
 			margin-left: 1.5rem;
 			margin-top: 0;
@@ -472,6 +563,11 @@
 
 
 @media (max-width: 480px){
+	.homepage .grid{
+		background-image: url(../images/bg480.jpg);
+		background-position: center top;
+	}
+
 	#news-carousel .news-slide{
 		width: 100%;
 	}
@@ -485,6 +581,23 @@
 
 
 @media (max-width: 460px){
+	.webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc320.webp);
+			}
+		}
+	}
+
+	.no-webp{
+		.homepage{
+			.main-pic{
+				background-image: url(../images/disc320.png);
+			}
+		}
+	}
+
+
 	.homepage{
 		.content{
 			display: block;
@@ -507,15 +620,12 @@
 		}
 
 		.main-pic{
-			background-image: url(../images/disc320.png);
 			background-position:  center top !important;
-			width: 100%;
+			height: 325px;
 			margin-left: 0;
 			margin-top: 2.5rem;
-			height: 325px;
+			width: 100%;
 		}
-
-
 	}
 
 	#news-carousel .news-slide{
@@ -549,15 +659,21 @@
 
 
 @media (max-width: 420px){
-	.homepage .counter{
-		p{
-			padding-right: 0;
-			&:after{
-				top: 0;
+	.homepage{
+		.counter{
+			p{
+				padding-right: 0;
+				&:after{
+					top: 0;
+				}
+				width: 125px;
 			}
-			width: 125px;
 		}
+		.grid{
+			background-image: url(../images/bg320.jpg);
+		}		
 	}
+
 }
 
 @media (max-width: 330px){
