--- a/app/scss/_responsive-base.scss
+++ b/app/scss/_responsive-base.scss
@@ -121,9 +121,10 @@
 		}
 	}
 	.header .btn-callback{
-		width: 100%;
+		display: block;
 		padding-left: 3rem;
 		padding-right: 3rem;
+		width: 100%;
 	}
 }
 
